[gd_scene load_steps=5 format=3 uid="uid://cwsqfgtb582bw"]

[ext_resource type="Theme" uid="uid://bco48s7clwpt7" path="res://content/gui/base.tres" id="1_bcel7"]
[ext_resource type="Script" path="res://scripts/gui/title_screen.gd" id="2_ebf7j"]

[sub_resource type="Gradient" id="Gradient_n5bif"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0338533, 0.0338533, 0.0338533, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b6w6b"]
gradient = SubResource("Gradient_n5bif")

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bcel7")
script = ExtResource("2_ebf7j")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 401.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 128
text = "Malun"

[node name="OpenServer" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 117.5
offset_right = 450.0
offset_bottom = 159.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = " start server"
alignment = 0

[node name="OpenClient" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 167.5
offset_right = 450.0
offset_bottom = 209.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = " join client"
alignment = 0

[node name="OpenSettings" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 217.5
offset_right = 450.0
offset_bottom = 259.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = " settings"
alignment = 0

[node name="Exit" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 317.5
offset_right = 95.0
offset_bottom = 359.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = " exit"
alignment = 0

[node name="SettingsWindow" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 500.0
offset_top = 200.0
offset_right = 1000.0
offset_bottom = 700.0

[node name="TextureRect" type="TextureRect" parent="SettingsWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_b6w6b")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsWindow/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Mouse Sensitivity"

[node name="MouseSense" type="HSlider" parent="SettingsWindow/VBoxContainer"]
layout_mode = 2

[node name="ClientWindow" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -160.0
offset_right = 250.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ClientWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_b6w6b")

[node name="ClientName" type="LineEdit" parent="ClientWindow"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 50.0
placeholder_text = "player name"

[node name="Address" type="LineEdit" parent="ClientWindow"]
layout_mode = 2
offset_top = 50.0
offset_right = 500.0
offset_bottom = 100.0
placeholder_text = "ip address"

[node name="StartClient" type="Button" parent="ClientWindow"]
layout_mode = 2
offset_top = 100.0
offset_right = 500.0
offset_bottom = 142.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = " connect"
alignment = 0

[node name="ServerWindow" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -160.0
offset_right = 250.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ServerWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_b6w6b")

[node name="ServerName" type="LineEdit" parent="ServerWindow"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 50.0
placeholder_text = "player name"

[node name="LoadSave" type="Button" parent="ServerWindow"]
layout_mode = 0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 92.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = " load save"
alignment = 0

[node name="StartServer" type="Button" parent="ServerWindow"]
layout_mode = 2
offset_top = 100.0
offset_right = 500.0
offset_bottom = 142.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = " start"
alignment = 0

[connection signal="pressed" from="Label/OpenServer" to="." method="_on_open_server_pressed"]
[connection signal="pressed" from="Label/OpenClient" to="." method="_on_open_client_pressed"]
[connection signal="pressed" from="Label/OpenSettings" to="." method="_on_settings_pressed"]
[connection signal="text_changed" from="ClientWindow/ClientName" to="." method="_on_client_name_text_changed"]
[connection signal="text_changed" from="ClientWindow/Address" to="." method="_on_address_text_changed"]
[connection signal="text_changed" from="ServerWindow/ServerName" to="." method="_on_server_name_text_changed"]
